<resources>
    <string name="app_name">The Movie Card Book</string>
    <string name="intro_text">아래 버튼을 클릭해서 새 영화를 추가하세요.</string>
    <string name="add_movie">리뷰 추가</string>
    <string name="home">홈</string>
    <string name="rank">순위</string>
    <string name="search">영화 검색</string>
    <string name="search_movie">검색할 영화를 입력하세요</string>
    <string name="movie_title">제목</string>
    <string name="open_date">개봉일</string>
    <string name="view_date">날짜</string>
    <string name="movie_poster">포스터</string>
    <string name="movie_detail">영화 세부 정보</string>
    <string name="movie_desc">줄거리</string>
    <string name="review_star">별점</string>
    <string name="sel_date">날짜 선택</string>
    <string name="cancel_review">취소</string>
    <string name="save_review">저장</string>
    <string name="user">계정</string>
    <string name="setting">설정</string>
    <string name="write_id">아이디를 입력하세요.</string>
    <string name="write_email">이메일을 입력하세요.</string>

    <string name="write_pw">비밀번호를 입력하세요.</string>
    <string name="register">가입하기</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="logout">로그아웃</string>
    <string name="pw_reset">비밀번호 재설정</string>
    <string name="user_title">현재 로그인한 계정</string>
    <string name="no_account">아직 계정이 없으신가요?</string>

    <string name="sel_date_title">언제 영화를 보셨나요?</string>
</resources>